
  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

    HADOOP-11843. Make setting up the build environment easier.
    (Niels Basjes via cnauroth)

  IMPROVEMENTS

    HADOOP-11719. [Fsshell] Remove bin/hadoop reference from
    GenericOptionsParser default help text.
    (Brahma Reddy Battula via harsh)

    HADOOP-11692. Improve authentication failure WARN message to avoid user
    confusion. (Yongjun Zhang)

    HADOOP-11659. o.a.h.fs.FileSystem.Cache#remove should use a single hash map
    lookup. (Brahma Reddy Battula via aajisaka)

    HADOOP-11709. Time.NANOSECONDS_PER_MILLISECOND - use class-level final
    constant instead of method variable (Ajith S via ozawa)

    HADOOP-11447. Add a more meaningful toString method to SampleStat and 
    MutableStat. (kasha)

    HADOOP-11737. mockito's version in hadoop-nfs’ pom.xml shouldn't be
    specified. (Kengo Seki via ozawa)

    HADOOP-11741. Add LOG.isDebugEnabled() guard for some LOG.debug().
    (Walter Su via ozawa)

    HADOOP-11660. Add support for hardware crc of HDFS checksums on ARM aarch64
    architecture (Edward Nevill via Colin P. McCabe)

    HADOOP-9805. Refactor RawLocalFileSystem#rename for improved testability.
    (Jean-Pierre Matsumoto via cnauroth)

    HADOOP-11717. Support JWT tokens for web single sign on to the Hadoop
    servers. (Larry McCay via omalley)

    HADOOP-11814. Reformat hadoop-annotations, o.a.h.classification.tools.
    (Li Lu via wheat9)

    HADOOP-7713. dfs -count -q should label output column (Jonathan Allen
    via aw)

    HADOOP-11819. HttpServerFunctionalTest#prepareTestWebapp should create web
    app directory if it does not exist. (Rohith via vinayakumarb)

    HADOOP-11827. Speed-up distcp buildListing() using threadpool