@@ -189,4 +189,9 @@ public class MapWritable extends AbstractMapWritable
       instance.put(key, value);
     }
   }
+
+  @Override
+  public String toString() {
+    return instance.toString();
+  }
 }
